--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "react-scripts": "3.0.1",
     "react-social-login-buttons": "2.3.1"
   },
+  "homepage" : "http://myname.github.io/myapp",
   "devDependencies": {
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
